tests/ui/splat/splat-unsafe-fn-tuple-fail.stderr
error: multiple `#[splat]`s are not allowed in the same function
  --> $DIR/splat-unsafe-fn-tuple-fail.rs:9:30
   |
LL | unsafe fn unsafe_multi_splat(#[splat] (_a, _b): (u32, i8), #[splat] (_c, _d): (u32, i8)) {}
   |                              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = help: remove `#[splat]` from all but one argument

error[E0277]: cannot use splat attribute; the splatted argument type must be a tuple or unit, not a u32 (u32)
  --> $DIR/splat-unsafe-fn-tuple-fail.rs:6:42
   |
LL | unsafe fn unsafe_wrong_type(#[splat] _x: u32) {}
   |                                          ^^^
...
LL |         unsafe_wrong_type(1u32);
   |         ^^^^^^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
